2003-09-30  Andras Varga

	* opp_msgc: with customize=true, adds a default dup() function to the 
	generated _Base class that throws an exception and warns the user.
	Also made assignment operator protected, to force the user overwrite
	it with a fresh one in the customized class.

2003-08-12  Andras Varga

	* opp_msgc: implemented -h option, meaning identical to nedc 
	[patch by Johnny Lai]

2003-07-27  Andras Varga

	* nedtool: implemented -t option (store source code), needed for
	documentation generation

2003-06-18  Andras Varga

	* TODO: should not generate set...ArraySize() methods for abstract 
	arrays. Tkenv doesn't really need them and seems like
	they're in the way.

	* TODO: should *not* generate impl of copy ctor in .._Base class

2003-06-16  ------ omnetpp-2.3 released ------

2003-06-16  Andras Varga

	* opp_msgc: messages (cMessage subclasses) now accept message kind
	as second, optional parameter to constructor.

2003-05-01  Andras Varga

	* opp_msgc fix: perl in RedHat 9 (rpm 5.8.0-88) is broken, it doesn't 
	recognize the [^\s] construct in regexps. Workaround: replaced [^\s]
	with [^ \t\r\n].

2003-03-19  Andras Varga

	* opp_msgc: accept, but (since imports are not yet supported) ignore 
	the -I flag

2003-03-15  ------ omnetpp-2.3b2 released ------

2003-02-15  ------ omnetpp-2.3b1 released ------

2003-02-14  Andras Varga

	* nedc: no limit on ned file line length

2003-01-30  Andras Varga

	* added handling of new MathFunc4Args

2003-01-22  Andras Varga

	* jar_expr.c: adopted to increased type safety of cFunctionType

2003-01-04  Andras Varga

	* opp_msgc: added support for cplusplus {{ ... }} syntax

	* opp_msgc: 'cobject <classname>' syntax changed to 'class <classname>',
	'noncobject <classname>' changed to 'class noncobject <classname>'.

2002-12-22  Andras Varga

	* jar.c: zero module vector size crashed network setup code. Temprarily,
	check_module_count() changed to make zero size an error. This will